Remove Integer Instantiation